# hypergrid

./: .gitignore  Cargo.toml  LICENSE  README.md  build-production.sh  build-staging.sh  build.sh  metadata-short.json  metadata.json  metadata_o.json
constants/: production.rs  production.ts  staging.rs  staging.ts
gridchat-pkg/: kibitz.wasm
gridchat-pkg/kibitz-ui/: 404.html  index.html  index.txt
hpn-client/: Cargo.toml  MIGRATION_MCP_SEPARATION.md  README.md  metadata.json  package-lock.json
hpn-client/api/: hpnclient:sortugdev.os-v0.wit
hpn-client/hpnclient/: Cargo.toml
hpn-client/hpnclient/src/: chain.rs  db.rs  graph.rs  helpers.rs  http_handlers.rs  identity.rs  lib.rs  structs.rs  wallet_manager.rs
hpn-client/hpnclient/src/wallet/: payments.rs  service.rs
hpn-client/pkg/: manifest.json  scripts.json
hpn-client/pkg/ui/: bundle.js  index.html
hpn-client/test/: tests.toml
hpn-client/test/hpnclient-test/: Cargo.toml  metadata.json
hpn-client/test/hpnclient-test/api/: hpnclient-test:sortugdev.os-v0.wit
hpn-client/test/hpnclient-test/hpnclient-test/: Cargo.toml
hpn-client/test/hpnclient-test/pkg/: manifest.json
hpn-client/ui/: index.html  package-lock.json  package.json
hpn-client/ui/src/: App.tsx  index.css
hpn-client/ui/src/components/: AccountManager.tsx  AccountManagerDisplayModal.tsx  (+24 more)
hpn-provider/: .gitignore  Cargo.toml  README.md  metadata.json
hpn-provider/api/: hpn-provider-template-dot-os-v0.wit  hpn-provider.wit  types-hpn-provider-template-dot-os-v0.wit
hpn-provider/hpn-provider/: Cargo.toml
hpn-provider/hpn-provider/src/: lib.rs  util.rs
hpn-provider/pkg/: hpn-provider.wasm  manifest.json
hpn-provider/test/: tests.toml
hpn-provider/test/hpn-provider-test/: Cargo.toml  metadata.json
hpn-provider/ui/: package-lock.json
hpn-provider/ui/src/: App.css  App.tsx
hpn-shim/: .gitignore  README.md  package-lock.json  package.json
hpn-shim/src/: index.ts
hypergrid-provider/: Cargo.toml  README.md  metadata.json
hypergrid-provider/api/: hypergrid-provider-template-dot-os-v0.wit  hypergrid-provider.wit  types-hypergrid-provider-template-dot-os-v0.wit
hypergrid-provider/hypergrid-provider/: Cargo.toml
hypergrid-provider/hypergrid-provider/src/: lib.rs  util.rs
hypergrid-provider/pkg/: hypergrid-provider.wasm  manifest.json
hypergrid-provider/ui/src/: App.css  App.tsx
hypergrid-shim/: CHANGELOG.md  LOCAL_DEVELOPMENT.md  README.md  package.json
hypergrid-shim/src/: index.ts
operator/: Cargo.toml  README.md  metadata.json
operator/api/: operator-process.wit  operator-sortugdev-dot-os-v0.wit  operator:ware.hypr-v0.wt  types-operator-sortugdev-dot-os-v0.wit
operator/operator/: CIRCLE-PAYMASTER-INTEGRATION-PLAN.md  CIRCLE-PAYMASTER-INTEGRATION.md  Cargo.toml  HYPERWALLET-MIGRATION.md  README.events.md
operator/operator/src/: app_api_types.rs  authorized_services.rs  chain.rs  curl_parser.rs  db.rs  eth.rs  graph.rs  helpers.rs  http_handlers.rs  icon  identity.rs  init.rs  ledger.rs  lib.rs  minting.rs  shim.rs  spider.rs  structs.rs  terminal.rs  wallet.rs  wallet_manager.rs  websocket.rs
operator/operator/src/hyperwallet_client/: account_abstraction.rs  mod.rs  payments.rs  service.rs
operator/operator/src/tests/: api_tests.rs  auth_tests.rs  graph_tests.rs  helpers_tests.rs  state_tests.rs
operator/operator/src/wallet/: mod.rs  payments.rs  service.rs
operator/pkg/: manifest.json  scripts.json
operator/pkg/ui/: bundle.js  index.html
operator/ui/: index.html  package.json  vite.config.ts
operator/ui/src/: App.tsx  abis.ts  index.css  main.tsx
pkg/: manifest.json  provider.wasm  scripts.json
pkg/api/: hypergrid-provider.wit  operator:sortugdev.os-v0.wit  provider-template-dot-os-v0.wit  types-provider-template-dot-os-v0.wit
pkg/provider-ui/: index.html
pkg/provider-ui/assets/: add-C0m41Sp-.js  add-RAvVm9XZ.js  add-XAswBHa9.js  all-wallets-ByxYanQX.js  all-wallets-CqlMCkxR.js  all-wallets-NmSJAT4V.js  app-store-BtTF-ISx.js  app-store-Cr_CeGeg.js  app-store-Z1OXMW92.js  apple-CNVvPBhx.js  apple-DA3tRSu3.js  apple-i6v373eR.js  arrow-bottom-CYzV4DjR.js  arrow-bottom-C_7urTim.js  arrow-bottom-circle-Dc5_fgfI.js  arrow-bottom-circle-LFdtQQvv.js  arrow-bottom-circle-Nh8Sij4q.js  arrow-bottom-nAOz42CK.js  arrow-left-CAPFzZp0.js  arrow-left-CvM4UP-q.js  arrow-left-DCwfSc6e.js  arrow-right-7P8WWB4k.js  arrow-right-CwqEkKAd.js  arrow-right-DRe67Ijz.js  arrow-top-Bs_iuNW-.js  arrow-top-CaxTGtjj.js  arrow-top-DMVQxhza.js  bank-C0WhBsJC.js  bank-C368FBud.js  bank-CE9IeeDy.js  basic-CZggNvLO.js  basic-DLdCLXxf.js  basic-DxjQKlwQ.js  browser-BphwHDY7.js  browser-Da3oItjb.js  browser-DkZaeSN2.js  browser-Ds3XcpzJ.js  browser-RICdWdJ0.js  browser-rAqbQLeB.js  card-CJ55jQRH.js  (+231 more)
pkg/ui/: bundle.js  index.html
provider/: .gitignore  Cargo.toml  README.md  metadata.json
provider/pkg/: manifest.json
provider/provider/: Cargo.toml
provider/provider/src/: curl_executor.rs  db.rs  icon  lib.rs  util.rs
provider/test/: tests.toml
provider/test/hypergrid-provider-test/: Cargo.toml  metadata.json
provider/ui/: index.html  package.json  vite.config.ts
provider/ui/src/: App.tsx  index.css
(+153 files in other folders)
