[package]
name = "hpnclient"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
alloy-sol-types = "0.8.15"
alloy-primitives = "0.8.15"
hex = "0.4.3"
rmp-serde = "1.1.2"
anyhow = "1.0"
# hyperware_process_lib = { version = "1.0.4", features = ["logging"] } # Old version
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", branch = "wh/wallet-signer", features = ["logging"] }
process_macros = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"
chrono = "0.4.40"
rand = "0.8"
sha3 = "0.10"
sha2 = "0.10"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",
]

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hyperware:process"
