[dependencies]
anyhow = "1.0.97"
process_macros = "0.1"
rmp-serde = "1.3.0"
serde_json = "1.0"
url = "2.5.4"
uuid = "1.4.1"
wit-bindgen = "0.36.0"
base64ct = "=1.6.0"

[dependencies.caller-utils]
path = "../target/caller-utils"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "47400ab"

[dependencies.hyperware_app_common]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "47400ab"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "hypergrid-provider"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
