[dependencies]
alloy-primitives = "0.8.15"
alloy-sol-types = "0.8.15"
anyhow = "1.0"
base64ct = "=1.6.0"
chrono = "0.4.40"
hex = "0.4.3"
process_macros = "0.1.0"
rand = "0.8"
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
url = "2.4"
wit-bindgen = "0.42.1"

[dependencies.hyperprocess_macro]
branch = "develop"
git = "https://github.com/hyperware-ai/hyperprocess-macro"

[dependencies.hyperware_process_lib]
features = [
    "hyperapp",
    "hyperwallet",
]
git = "https://github.com/hyperware-ai/process_lib"
rev = "4beff93"

[dependencies.operator_caller_utils]
optional = true
path = "../target/operator-caller-utils"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.uuid]
features = ["v4"]
version = "1.16.0"

[features]
caller-utils = ["operator_caller_utils"]
default = []
legacy-mods = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "operator"
publish = false
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
