[dependencies]
anyhow = "1.0.97"
base64ct = "=1.6.0"
hyperware_process_lib = { git = "https://github.com/hyperware-ai/process_lib", features = ["hyperapp"], rev = "9971afe" }
process_macros = "0.1"
rmp-serde = "1.3.0"
serde_json = "1.0"
url = "2.5.4"
urlencoding = "2.1"
uuid = "1.4.1"
wit-bindgen = "0.42.1"

[dependencies.caller-utils]
path = "../target/caller-utils"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "c0d0bb9"

[dependencies.hyperware_app_common]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "c0d0bb9"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "provider"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
