[dependencies]
anyhow = "1.0.97"
base64ct = "=1.6.0"
process_macros = "0.1"
rmp-serde = "1.3.0"
serde_json = "1.0"
url = "2.5.4"
urlencoding = "2.1"
uuid = "1.4.1"
wit-bindgen = "0.42.1"

[dependencies.caller-utils]
optional = true
path = "../target/caller-utils"

[dependencies.hyperprocess_macro]
branch = "develop"
git = "https://github.com/hyperware-ai/hyperprocess-macro"

[dependencies.hyperware_process_lib]
features = [
    "hyperapp",
    "logging",
]
branch = "develop"
git = "https://github.com/hyperware-ai/process_lib"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "provider"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
